reports/test-stuff.log
Traceback (most recent call last):
  File "C:\Users\Jim\anaconda3\envs\jupyter-book\lib\site-packages\jupyter_cache\executors\utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "C:\Users\Jim\anaconda3\envs\jupyter-book\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\Jim\anaconda3\envs\jupyter-book\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\Jim\anaconda3\envs\jupyter-book\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\Jim\anaconda3\envs\jupyter-book\lib\asyncio\base_events.py", line 587, in run_until_complete
    return future.result()
  File "C:\Users\Jim\anaconda3\envs\jupyter-book\lib\site-packages\nbclient\client.py", line 664, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "C:\Users\Jim\anaconda3\envs\jupyter-book\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\Jim\anaconda3\envs\jupyter-book\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
```{glue:figure} boot_fig
:figwidth: 300px
:name: "fig-boot"

This is a **caption**, with an embedded `{glue:text}` element: {glue:text}`boot_mean:.2f`!
```
------------------

[1;36m  File [1;32m"C:\Users\Jim\AppData\Local\Temp\ipykernel_179432\299355072.py"[1;36m, line [1;32m1[0m
[1;33m    ```{glue:figure} boot_fig[0m
[1;37m    ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (299355072.py, line 1)

